fixed overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -129,8 +129,14 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
+  overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+body {
+  position: relative;
 }
 
 ::-webkit-scrollbar {
